Add a full_title helper

--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -3,6 +3,5 @@
 
 <h1>Help</h1>
 <p>
-  If you have any questions on what Moodly is or any suggestions for the website
-  email us at moodlyme@gmail.com
+  I cannot help you. Only you can help yourself.
 </p>
