Finish layout and routes

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,8 +1,14 @@
+<div class="center hero-unit">
+  <h1>Moodly</h1>
 
-<h1>Moodly</h1>
-<p>
-  This is the home page for the
-  <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
-  sample application.
-</p>
+  <h2>
+    Welcome to Moodly, Humanize the internet.
+  </h2>
+
+  <%= link_to "Sign up now!",signup_path, class: "btn btn-large btn-primary" %>
+
+</div>
+
+
+
 
